# guesser-game-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/handlers/: mod.rs  secret.rs  utils.rs
src/storage/: mod.rs  secret.rs  secret_word.rs  storage.rs
