[package]
name = "guesser-game-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
